# msnoise-tomo

./: ---setup.cfg  .travis.yml  CMakeLists.txt  CONTRIBUTORS.txt  MANIFEST.in  PKG-INFO  README.md  appveyor.yml  bintray.json  pyproject.toml  setup.py
.github/: environment.yml
.github/workflows/: test_linux.yml
doc/: conf.py  index.rst  installation.rst  make.bat
doc/.static/: my-styles.css
msnoise_tomo/: ANSWT.py  EllipseFit.py  default.py  examplepickdispcurve.py  export_single_sided.py  fitellipse.py  ftan.py  ftan_call.py  iftan.py  install.py  intersect.py  plot3d.py  plotdisp.py  plugin_definition.py  prepare_1d.py  prepare_tomo.py  test_mksmoothing.py  tomo_table_def.py
msnoise_tomo/DATAFiles/: ParamFile.txt
msnoise_tomo/lib/: libmkMatSmoothing.py  libmk_MatPaths.py  libvg_fta.py
msnoise_tomo/test/: tests.py
msnoise_tomo/test/data/: DK_NRS_DK_NUUG_Sym.SAC  GLISNGrid.txt
src/: Makefile  configparser.cpp  configparser.h  fft_NR.cpp  fft_NR.h  fta_param.cpp  fta_param.h  libfta.cpp  libfta.def  libfta.h  mathfunc.h  mkMatSmoothing.c  mkMatSmoothing.def  mk_MatPaths.c  mk_MatPaths.def  mk_MatSmoothing.c  readsac.cpp  readsac.h  stringutils.h  vg_fta.cpp  vg_fta.def
tests/: test_c_extensions.py
